--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Go to console</h1>
-    <script src="objetos.js"></script>
+    <script src="validandoCPF.js"></script>
   </body>
 </html>
